# BitsetContainer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/BitsetContainer/: BitsetContainer.hpp
test/: CMakeLists.txt
test/tests/: BitsetContainerTests.cpp  IteratorTests.cpp
